--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Enthusiastic Programmers Club
 description: CS Club
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: images/avatar.png
 
 #
 # Flags below are optional
