--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Enthusiastic Programmers Club
 description: CS Club
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: ./images/avatar.png
+avatar: https://enthusiasticprogrammers.github.io/blog/images/avatar.png
 
 #
 # Flags below are optional
